Major changes - and final submission
Signed-off-by: Scott Robarts <scott.robarts@blinkdesigns.ca>

--- a/WebContent/styles/styles.css
+++ b/WebContent/styles/styles.css
@@ -131,6 +131,11 @@ img.header_image {
 	padding-right:15px;
 }
 
+#homecontent p.bigtext {
+	font-size:3.0em;
+	color:#A60000;
+}
+
 
 
 /* ---------- Error Output -------- */
